Fixed issue with body content covering the header when scrolling

--- a/mobile/mobile-body.css
+++ b/mobile/mobile-body.css
@@ -1,7 +1,8 @@
-.outer-body {
+.main-outer-body {
     margin: 0;
+    margin-top: 129px;
     width: 100%;
-    height: 100rem;
+    height: auto;
     background-color: #9dffd9;
 }
 
